--- a/estilos/style.css
+++ b/estilos/style.css
@@ -106,6 +106,50 @@ nav ul li a{
     justify-content: center;
 }
 
+/* Style Nosotros */
+
+.containerNosotros{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.1fr 1fr 0.2fr;
+    grid-template-areas:
+    "header header"
+    "main main"
+    "footer footer";
+}
+
+.nosotrosHeader{
+    grid-area: header;
+}
+
+.nosotrosMain{
+    grid-area: main;
+    background-color: rgb(55, 2, 50);
+}
+
+.nosotrosMain{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "nosotrosPic nosotrosDecrip"
+    ;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    color: white;
+}
+
+.nosotrosPic{
+    display: flex;
+    justify-content: center;
+}
+
+.nosotrosDescrip{
+    display: flex;
+    justify-content: center;
+}
+
+
 /* Style Menu */
 
 .containerMenu{
@@ -307,6 +351,31 @@ nav ul li a{
         "mapa"
         "footer";
     }
+
+    /* Media Query Nosotros */
+    .containerNosotros{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.1fr 1fr 0.2fr;
+        grid-template-areas:
+        "header"
+        "main"
+        "footer";
+    }
+    .nosotrosMain{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+        "nosotrosPic"
+        "nosotrosDescrip";
+    }
+
+    .nosotrosDescrip{
+        display: flex;
+        margin-top: 10%;
+    }
+
     /* Media Query Menu */
     .containerMenu{
         display: grid;
