--- a/SASS/_variables.scss
+++ b/SASS/_variables.scss
@@ -1,5 +1,6 @@
 /*Variable*/
 
-$fondo: rgb(55, 2, 50);
-$letra: white;
-
+$fondo: rgb(179, 174, 179);
+$letra: black;
+$fondoMapa: rgb(248, 242, 248);
+$fondoFooter: black;
