--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -128,7 +128,7 @@ header{
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
-    "nosotrosPic nosotrosDecrip"
+    "nosotrosPic nosotrosDescrip"
     ;
     padding-top: 10%;
     padding-bottom: 10%;
@@ -136,11 +136,13 @@ header{
 }
 
 .nosotrosPic{
+    grid-area: nosotrosPic;
     display: flex;
     justify-content: center;
 }
 
 .nosotrosDescrip{
+    grid-area: nosotrosPic;
     display: flex;
     justify-content: center;
 }
@@ -347,7 +349,7 @@ header{
 
 /* Media Query para 500px*/
 
-@media (max-width: 500px){
+@media (max-width: 700px){
     /* Media Query Index */
     .containerIndex{
         display: grid;
@@ -376,13 +378,16 @@ header{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
         grid-template-areas: 
-        "nosotrosPic"
-        "nosotrosDescrip";
+        "nosotrosDescrip"
+        "nosotrosPic";
     }
 
-    .nosotrosDescrip{
+
+    .nosotrosH1{
         display: flex;
-        margin-top: 10%;
+        padding-top: 10%;
+        justify-items: center;
+        justify-content: center;
     }
 
     /* Media Query Menu */
