--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,7 @@
 /*Variable*/
 nav {
   -ms-grid-row: 1;
-  -ms-grid-column: 2;
+  -ms-grid-column: 1;
   grid-area: nav;
 }
 
@@ -145,11 +145,11 @@ footer {
 header {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 0.1fr 3fr;
-      grid-template-columns: 0.1fr 3fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
-      grid-template-areas: "logo nav";
+      grid-template-areas: "nav";
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -158,8 +158,6 @@ header {
 }
 
 .logo {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
   grid-area: logo;
 }
 
@@ -246,9 +244,9 @@ header {
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-      grid-template-areas: "nosotrosPic nosotrosDescrip";
+  -ms-grid-rows: 0.5fr 0.5fr;
+      grid-template-rows: 0.5fr 0.5fr;
+      grid-template-areas: "nosotrosPic nosotrosDescrip" "nosotrosPic nosotrosConocenos";
   padding-top: 10%;
   padding-bottom: 10%;
   color: black;
@@ -256,6 +254,7 @@ header {
 
 .nosotrosPic {
   -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: nosotrosPic;
   display: -webkit-box;
@@ -268,14 +267,20 @@ header {
 
 .nosotrosDescrip {
   -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: nosotrosPic;
+  -ms-grid-column: 2;
+  grid-area: nosotrosDescrip;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.nosotrosConocenos {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: nosotrosConocenos;
 }
 
 /* Style Menu */
@@ -565,15 +570,34 @@ header {
     display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-template-areas: "nosotrosDescrip" "nosotrosPic";
+    -ms-grid-rows: 0.3fr 0.3fr 0.3fr;
+        grid-template-rows: 0.3fr 0.3fr 0.3fr;
+        grid-template-areas: "nosotrosDescrip" "nosotrosConocenos" "nosotrosPic";
   }
   .nosotrosH1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     padding-top: 10%;
+    justify-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .conocenos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 10%;
+    justify-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .parrafo1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     justify-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
