--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -33,7 +33,7 @@
     grid-area: main;
     background-image: url(../imagenes/FondoDina.JPG);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center;
     background-size: cover;
 }
 
@@ -82,14 +82,6 @@ header{
     color: $letra;
 }
 
-/*
-.parrafoDina{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: $letra;
-}
-*/
 .imagenFront{
     display: flex;
     justify-content: center;
@@ -286,43 +278,7 @@ header{
     height: auto;
     width: auto;
 }
-/*
-.item1{
-    background-image: url(../imagenes/Foto1.JPG);
-    background-position: center;
-    background-size: cover;
-}
 
-.item2{
-    background-image: url(../imagenes/Foto2.JPG);
-    background-position: center;
-    background-size: cover;
-}
-
-.item3{
-    background-image: url(../imagenes/Foto3.JPG);
-    background-position: center;
-    background-size: cover;
-}
-
-.item4{
-    background-image: url(../imagenes/Foto4.JPG);
-    background-position: center;
-    background-size: cover;
-}
-
-.item5{
-    background-image: url(../imagenes/Foto5.JPG);
-    background-position: center;
-    background-size: cover;
-}
-
-.item6{
-    background-image: url(../imagenes/Foto6.JPG);
-    background-position: center;
-    background-size: cover;
-}  
-*/
 
 /* Style Contatos */
 
@@ -353,7 +309,7 @@ header{
 
 /* MEDIAQUERY */
 
-/* Media Query para 500px*/
+/* Media Query para 700px*/
 
 @media (max-width: 700px){
     /* Media Query Index */
